Se define effecto sobre equipo de coordinacion

--- a/web/templates/carrera/coordinacion.html
+++ b/web/templates/carrera/coordinacion.html
@@ -20,70 +20,63 @@
     <div class="shell text-left">
       <div class="isotope-wrap">
         <div class="row">
-          <div class="col-md-3">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Viviana Escudero</h5>
-                <p class="text-center">Área Curricular de Ciencias Básicas</p>
+          <div class="col-md-4">
+            <!--
+            <figure class="thumbnail-josip thumbnail-spacing">
+              <img src="{% static 'images/carrera/docentes/mujer.png' %}" alt=""/>
+              <div class="thumbnail-desc" style="padding: 10px 10px 20px; text-align:center">
+                <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">Viviana Escudero</h6>
+                <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;"></h6>
+              </div>
+              <figcaption>
+                <span class="btn btn-block btn-rect text-md-center btn-java" data-toggle="modal" data-target="">Área Curricular de Ciencias Básicas</span>
+              </figcaption>
+            </figure>
+            -->
+
+            <div class="profile-card">
+              <div class="profile-img">
+                <img src="{% static 'images/carrera/docentes/mujer.png' %}" alt="Team Image"/>
+              </div>
+              <div class="profile-content">
+                <h2 class="title">Rosa Cuevas
+                  <span>Área Curricular de Patología y Diagnóstico Área Curricular de Patología y Diagnóstico</span>
+                </h2>
+                <!--
+                <ul class="social-link">
+                  <li><a href="#" class="fa fa-facebook"></a></li>
+                  <li><a href="#" class="fa fa-google"></a></li>
+                  <li><a href="#" class="fa fa-twitter"></a></li>
+                  <li><a href="#" class="fa fa-youtube"></a></li>
+                </ul>
+                -->
               </div>
             </div>
+
           </div>
-          <div class="col-md-3">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Rosa Cuevas</h5>
-                <p class="text-center">Área Curricular de Patología y Diagnóstico</p>
+          <div class="col-md-4">
+
+            <div class="profile-card">
+              <div class="profile-img">
+                <img src="{% static 'images/carrera/docentes/mujer.png' %}" alt="Team Image"/>
+              </div>
+              <div class="profile-content">
+                <h2 class="title">Rosa Cuevas
+                  <span>Área Curricular de Patología y Diagnóstico</span>
+                </h2>
               </div>
             </div>
+
           </div>
-          <div class="col-md-3">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Christian Castillo</h5>
-                <p class="text-center">Área Curricular de Ciencias Preclínicas Integradas</p>
+          <div class="col-md-4">
+            <div class="profile-card">
+              <div class="profile-img">
+                <img src="{% static 'images/carrera/docentes/mujer.png' %}" alt="Team Image"/>
               </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Paula Arriagada</h5>
-                <p class="text-center">Área Curricular de Odontología Integral del Niño</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="row">
-          <div class="col-md-3 col-md-offset-1">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Konrad Fritz</h5>
-                <p class="text-center">Área Curricular de Odontología Conservadora</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/mujer.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Jorge Maldonado</h5>
-                <p class="text-center">Área Curricular de Rehabilitación Oral</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="thumbnail" style="background-color:lightblue">
-              <img width="270" height="270" src="{% static 'images/carrera/docentes/hombre.png' %}" alt="" />
-              <div class="caption">
-                <h5 class="text-center">Andrés Guerrero</h5>
-                <p class="text-center">Área Curricular de Cirugía</p>
-                <p></p>
+              <div class="profile-content">
+                <h2 class="title">Rosa Cuevas
+                  <span>Área Curricular de Patología y Diagnóstico</span>
+                </h2>
               </div>
             </div>
           </div>
