Se agregan las apps para poder subir los coordanciones por área y equipo directivo.

--- a/web/templates/carrera/equipo_directivo.html
+++ b/web/templates/carrera/equipo_directivo.html
@@ -62,7 +62,7 @@
                                   </div>
                               </div>
                               <div data-filter="odontopediatrias" class="col-md-12 isotope-item">
-                                  <h3>Administación</h3>
+                                  <h3>Administración</h3>
                                   <hr class="divider divider-lg hr-sm-left-2 bg-primary">
                                   <div class="row">
                                     <div class="col-md-4">
