Se mezclan ramas

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -15,13 +15,13 @@
                 <div class="col-md-6 marco-video">
                     <iframe src="https://www.youtube.com/embed/iQeiUi-U2eM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
-                      <span class="fa-quote-left"></span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta a, dolore iste recusandae doloribus doloremque. Repellendus dicta repudiandae placeat vitae, officiis voluptates praesentium molestiae! Incidunt aliquam excepturi sed autem saepe deleniti, dignissimos at enim qui, accusamus, quia ea inventore quae?<span class="fa-quote-right"></span>
+                      <span class="fa-quote-left"></span>Reccomendaciones odontológicas durante el covid-19<span class="fa-quote-right"></span>
                     </p>
                 </div>
                 <div class="col-md-6 marco-video">
                     <iframe src="https://www.youtube.com/embed/kj1ujARuLyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
-                      <span class="fa-quote-left"></span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quas velit nesciunt tempore qui rerum deserunt vitae. Ad sed numquam tempore, velit, quaerat consequatur veniam! Eaque expedita maiores quisquam, vero rem molestiae optio ex harum, odit. At quod autem maxime?<span class="fa-quote-right"></span>
+                      <span class="fa-quote-left"></span>Video de acreditación de odontológia<span class="fa-quote-right"></span>
                     </p>
                 </div>
                 <div class="col-md-12" style="margin-top:20px;">
