--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -38,8 +38,8 @@
                                     <li><a href="/carrera/admision"><span class="text-middle">Admisión</span></a></li>
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a></li>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a></li>
-                                    <li><a href="/carrera/equipo_directivo"><span class="text-middle">Equipo Directivo</span></a></li>
-                                    <li><a href="/carrera/coordinacion"><span class="text-middle">Coordinación</span></a></li>
+                                    <li><a href="/equipo_directivo/equipod"><span class="text-middle">Equipo Directivo</span></a></li>
+                                    <li><a href="/coordinacion_area/coordinadores"><span class="text-middle">Coordinación</span></a></li>
                                     <li><a href="/carrera/docentes"><span class="text-middle">Docentes</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
