Se sube dump de db desde produccion

--- a/web/templates/carrera/coordinacion.html
+++ b/web/templates/carrera/coordinacion.html
@@ -40,7 +40,7 @@
                 <img src="{{ coordinador.foto.url }}" alt="Team Image"/>
               </div>
               <div class="profile-content">
-                <h2 class="title">{{ coordinador.nombres }}+' '+{{ coordinador.apellido_paterno }}+' '+{{ coordinador.apellido_materno }}
+                <h2 class="title">{{ coordinador.nombres }} {{ coordinador.apellido_paterno }} {{ coordinador.apellido_materno }}
                   <span>{{ coordinador.cargo }}</span>
                 </h2>
                 <!--
