Se repara visualizacion de componente instagram

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -50,7 +50,7 @@
           -->
 
           <div class="range offset-top-60">
-              <div id="django_recent_media_wall" data-loop="false" data-margin="10" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="4" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-theme owl-loaded">
+              <div id="instagram_section" data-loop="false" data-margin="10" data-items="1" data-dots="true" data-mouse-drag="false" data-md-items="4" data-nav="false" class="owl-carousel owl-carousel-default owl-carousel-class-light owl-theme owl-loaded">
                 {% instagram_user_recent_media instagram_profile_name %}
                 {% for media in recent_media %}
                   <div class="owl-item">
