--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -84,8 +84,9 @@
                                     <h6>Redes Sociales</h6>
                                     <hr class="text-subline">
                                     <ul class="list-inline">
-                                        <li><a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a></li>
+                                        <li><a href="https://www.youtube.com/channel/UC-uRcTLGKySwEn976VaeXtA/" target="_blank" class="icon fa fa-youtube-play icon-xxs icon-circle icon-gray-light-2"></a></li>
                                         <li><a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a></li>
+                                        <li><a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a></li>
                                     </ul>
                                 </div>
                                 <div class="offset-top-60">
