--- a/web/templates/investigacion/cienciometria.html
+++ b/web/templates/investigacion/cienciometria.html
@@ -27,41 +27,13 @@
                                 <th class="text-center">N° de actividades o publicaciones asociadas a investigación</th>
                                 <th class="text-center">N° de actividades o publicaciones asociadas a educación</th>
                             </tr>
-                            <tr>
-                                <td>2014</td>
-                                <td align="center">0</td>
-                                <td align="center">2</td>
-                            </tr>
-                            <tr>
-                                <td>2015</td>
-                                <td align="center">6</td>
-                                <td align="center">4</td>
-                            </tr>
-                            <tr>
-                                <td>2016</td>
-                                <td align="center">0</td>
-                                <td align="center">0</td>
-                            </tr>
-                            <tr>
-                                <td>2017</td>
-                                <td align="center">10</td>
-                                <td align="center">3</td>
-                            </tr>
-                            <tr>
-                                <td>2018</td>
-                                <td align="center">10</td>
-                                <td align="center">21</td>
-                            </tr>
-                            <tr>
-                                <td>2019</td>
-                                <td align="center">14</td>
-                                <td align="center">3</td>
-                            </tr>
-                            <tr>
-                                <td>2020</td>
-                                <td align="center">6</td>
-                                <td align="center">14</td>
-                            </tr>
+                            {% for actividad in actividades %}
+                                <tr>
+                                    <td>{{actividad.temporada}}</td>
+                                    <td align="center">{{actividad.produccion_investigacion}}</td>
+                                    <td align="center">{{actividad.produccion_educacional}}</td>
+                                </tr>
+                            {% endfor %}
                         </table>
                     </div>
                 </div>
