--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -15,13 +15,13 @@
                 <div class="col-md-6 marco-video">
                     <iframe src="https://www.youtube.com/embed/iQeiUi-U2eM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
-                      <span class="fa-quote-left"></span>Reccomendaciones odontológicas durante el covid-19<span class="fa-quote-right"></span>
+                      <span class="fa-quote-left"></span>Recomendaciones odontológicas durante el covid-19<span class="fa-quote-right"></span>
                     </p>
                 </div>
                 <div class="col-md-6 marco-video">
                     <iframe src="https://www.youtube.com/embed/kj1ujARuLyY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="msg">
-                      <span class="fa-quote-left"></span>Video de acreditación de odontológia<span class="fa-quote-right"></span>
+                      <span class="fa-quote-left"></span>Video de acreditación de odontología<span class="fa-quote-right"></span>
                     </p>
                 </div>
                 <div class="col-md-12" style="margin-top:20px;">
