--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -217,6 +217,7 @@ div#instagram_section div.item-instagram {
     padding: 5px;
     position: relative;
     border: 1px solid rgba(0,0,0,.1);
+    overflow: hidden;
 }
 
 div#instagram_section img.img-instagram {
