Se modifican la lista de areas de docentes y se ordenan alfabeticamente.

--- a/web/templates/carrera/lista_docentes.html
+++ b/web/templates/carrera/lista_docentes.html
@@ -33,13 +33,15 @@
                               <li class="section-relative">
                                   <button data-custom-toggle="isotope-1" data-custom-toggle-disable-on-blur="true" class="isotope-filters-toggle btn btn-sm btn-default">Filtro<span class="caret"></span>
                                   </button>
-                                  <ul id="isotope-1" class="list-sm-inline isotope-filters-list">
-                                      <li><a data-isotope-filter="rehabilitacion_orales" data-isotope-group="gallery" href="#" class="active">Rehabilitación Oral</a></li>
-                                      <li><a data-isotope-filter="odontopediatrias" data-isotope-group="gallery" href="#">Odontopediatría</a></li>
-                                      <li><a data-isotope-filter="periodoncias" data-isotope-group="gallery" href="#">Periodoncia</a></li>
-                                      <li><a data-isotope-filter="endodoncias" data-isotope-group="gallery" href="#">Endodoncia </a></li>
+                                  <ul id="isotope-1" class="list-sm-inline isotope-filters-list">                                      
+                                      <li><a data-isotope-filter="ciencias_preclinicas" data-isotope-group="gallery" href="#">Cs. Básicas y Preclínicas</a></li>
                                       <li><a data-isotope-filter="cirugias" data-isotope-group="gallery" href="#">Cirugía</a></li>
-                                      <li><a data-isotope-filter="ciencias_preclinicas" data-isotope-group="gallery" href="#">Ciencias Preclínicas</a></li>
+                                      <li><a data-isotope-filter="endodoncias" data-isotope-group="gallery" href="#">Endodoncia </a></li>
+                                      <li><a data-isotope-filter="odontopediatrias" data-isotope-group="gallery" href="#">Odontopediatría</a></li>
+                                      <li><a data-isotope-filter="ortodoncia_ortopedia" data-isotope-group="gallery" href="#">Ortodoncia y Ortopedia</a></li>
+                                      <li><a data-isotope-filter="periodoncias" data-isotope-group="gallery" href="#">Periodoncia</a></li>
+                                      <li><a data-isotope-filter="radiologia_imagenologia" data-isotope-group="gallery" href="#">Radiología y Imagenología</a></li>
+                                      <li><a data-isotope-filter="rehabilitacion_orales" data-isotope-group="gallery" href="#" class="active">Rehabilitación Oral</a></li>
                                   </ul>
                               </li>
                           </ul>
